@@ -28,7 +28,7 @@
 		<logback.version>1.2.10</logback.version>
 		<aws-lambda-java-core-version>1.2.0</aws-lambda-java-core-version>
 		<maven-plugin-api-version>3.6.3</maven-plugin-api-version>
-		<!-- log4j version 1 is here for backwards compatibility -->
+		<!-- log4j version 1 is here for backwards compatibility testing -->
 		<log4j-version>1.2.17</log4j-version>
 		<!-- greater than 2.3.2 needs java 7+, this includes the 2.17.1 security fixes -->
 		<log4j2-version>2.3.2</log4j2-version>
@@ -70,6 +70,16 @@
 					<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
 				</snapshotRepository>
 			</distributionManagement>
+		</profile>
+		<profile>
+			<id>testlog4jv1</id>
+			<dependencies>
+				<dependency>
+					<groupId>log4j</groupId>
+					<artifactId>log4j</artifactId>
+					<version>1.2.17</version>
+				</dependency>
+			</dependencies>
 		</profile>
 	</profiles>
 	<build>
@@ -259,26 +269,20 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>${slf4j-version}</version>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
 			<version>${commons-logging-version}</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>${log4j-version}</version>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>${log4j2-version}</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-api</artifactId>
+			<artifactId>log4j-slf4j-impl</artifactId>
 			<version>${log4j2-version}</version>
 			<optional>true</optional>
 		</dependency>
@@ -306,6 +310,12 @@
 			<groupId>org.easymock</groupId>
 			<artifactId>easymock</artifactId>
 			<version>${easymock-version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>${log4j2-version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
