@@ -1,5 +1,7 @@
 package com.j256.simplelogging.backend;
 
+import java.lang.reflect.Method;
+
 import com.j256.simplelogging.Level;
 import com.j256.simplelogging.LogBackend;
 import com.j256.simplelogging.LogBackendFactory;
@@ -13,43 +15,106 @@ import com.j256.simplelogging.LogBackendFactory;
  */
 public class Log4jLogBackend implements LogBackend {
 
-	private final org.apache.log4j.Logger logger;
+	private final static Class<?> LOGGER_CLASS;
+	private final static Class<?> LEVEL_CLASS;
+	private final static Class<?> PRIORITY_CLASS;
+	private final static Method GET_LOGGER_METHOD;
+	private final static Method IS_ENABLED_FOR_METHOD;
+	private final static Method LOG_LEVEL_MESSAGE_METHOD;
+	private final static Method LOG_LEVEL_MESSAGE_THROWABLE_METHOD;
+	private static Object TRACE_LEVEL;
+	private static Object DEBUG_LEVEL;
+	private static Object INFO_LEVEL;
+	private static Object WARN_LEVEL;
+	private static Object ERROR_LEVEL;
+	private static Object FATAL_LEVEL;
+
+	private final Object logger;
+
+	static {
+		try {
+			LOGGER_CLASS = Class.forName("org.apache.log4j.Logger");
+			LEVEL_CLASS = Class.forName("org.apache.log4j.Level");
+			PRIORITY_CLASS = Class.forName("org.apache.log4j.Priority");
+		} catch (Exception e) {
+			throw new RuntimeException("Problems finding log4j v1 classes via reflection", e);
+		}
+
+		try {
+			GET_LOGGER_METHOD = LOGGER_CLASS.getMethod("getLogger", String.class);
+			IS_ENABLED_FOR_METHOD = LOGGER_CLASS.getMethod("isEnabledFor", PRIORITY_CLASS);
+			LOG_LEVEL_MESSAGE_METHOD = LOGGER_CLASS.getMethod("log", PRIORITY_CLASS, Object.class);
+			LOG_LEVEL_MESSAGE_THROWABLE_METHOD =
+					LOGGER_CLASS.getMethod("log", PRIORITY_CLASS, Object.class, Throwable.class);
+		} catch (Exception e) {
+			throw new RuntimeException("Problems finding log4j v1 methods via reflection", e);
+		}
+
+		try {
+			// get our static fields
+			TRACE_LEVEL = LEVEL_CLASS.getDeclaredField("TRACE").get(null);
+			DEBUG_LEVEL = LEVEL_CLASS.getDeclaredField("DEBUG").get(null);
+			INFO_LEVEL = LEVEL_CLASS.getDeclaredField("INFO").get(null);
+			WARN_LEVEL = LEVEL_CLASS.getDeclaredField("WARN").get(null);
+			ERROR_LEVEL = LEVEL_CLASS.getDeclaredField("ERROR").get(null);
+			FATAL_LEVEL = LEVEL_CLASS.getDeclaredField("FATAL").get(null);
+		} catch (Exception e) {
+			throw new RuntimeException("Problems finding log4j v1 fields via reflection", e);
+		}
+	}
 
 	public Log4jLogBackend(String className) {
-		this.logger = org.apache.log4j.Logger.getLogger(className);
+		try {
+			this.logger = GET_LOGGER_METHOD.invoke(null, className);
+		} catch (Exception e) {
+			throw new RuntimeException("Problems creating a log4j v1 instance via reflection", e);
+		}
 	}
 
 	@Override
 	public boolean isLevelEnabled(Level level) {
-		return logger.isEnabledFor(levelToLog4jLevel(level));
+		try {
+			return (Boolean) IS_ENABLED_FOR_METHOD.invoke(logger, levelToLog4jLevel(level));
+		} catch (Exception e) {
+			// ignored I guess
+			return false;
+		}
 	}
 
 	@Override
 	public void log(Level level, String msg) {
-		logger.log(levelToLog4jLevel(level), msg);
+		try {
+			LOG_LEVEL_MESSAGE_METHOD.invoke(logger, levelToLog4jLevel(level), msg);
+		} catch (Exception e) {
+			// ignored I guess
+		}
 	}
 
 	@Override
 	public void log(Level level, String msg, Throwable t) {
-		logger.log(levelToLog4jLevel(level), msg, t);
+		try {
+			LOG_LEVEL_MESSAGE_THROWABLE_METHOD.invoke(logger, levelToLog4jLevel(level), msg, t);
+		} catch (Exception e) {
+			// ignored I guess
+		}
 	}
 
-	private org.apache.log4j.Level levelToLog4jLevel(Level level) {
+	private Object levelToLog4jLevel(Level level) {
 		switch (level) {
 			case TRACE:
-				return org.apache.log4j.Level.TRACE;
+				return TRACE_LEVEL;
 			case DEBUG:
-				return org.apache.log4j.Level.DEBUG;
+				return DEBUG_LEVEL;
 			/* INFO below */
 			case WARNING:
-				return org.apache.log4j.Level.WARN;
+				return WARN_LEVEL;
 			case ERROR:
-				return org.apache.log4j.Level.ERROR;
+				return ERROR_LEVEL;
 			case FATAL:
-				return org.apache.log4j.Level.FATAL;
+				return FATAL_LEVEL;
 			case INFO:
 			default:
-				return org.apache.log4j.Level.INFO;
+				return INFO_LEVEL;
 		}
 	}
 
